--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section class="main-page">
         <div class="glass-card">
             <div class="img-container">
-                <img src="https://picsum.photos/id/859/250?grayscale" class="img-box" alt="">
+                <div class="img-box"></div>
                 <p class="img-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, tempora corporis
                     animi iusto
                     provident magnam, vitae nam officia impedit repudiandae officiis! Rerum mollitia incidunt nisi
@@ -51,26 +51,22 @@
                     blanditiis pariatur dignissimos iusto. Soluta, voluptas! Amet praesentium numquam corrupti nam</p>
             </div>
             <div class="second-container">
-                <p class="sec-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus provident
-                    porro minima
-                    molestiae blanditiis vero consequatur, aperiam explicabo unde ratione, sequi vel corrupti iste
-                    perferendis facilis impedit id quos eius error aliquam. Corporis, tempora adipisci? Laborum
-                    voluptates rerum vel qui, odit quos repellendus omnis voluptate quae molestiae. Odio, consectetur!
-                    Eligendi, delectus. Repudiandae exercitationem deleniti quo neque qui numquam fuga accusamus
-                    tempore! Suscipit qui provident vel fuga amet aliquid, adipisci deleniti reprehenderit sunt? Nobis
-                    in officiis modi vel, assumenda exercitationem reprehenderit quas saepe accusantium, architecto
-                    blanditiis pariatur dignissimos iusto. Soluta, voluptas! Amet praesentium numquam corrupti nam
+                <h1>Your CV</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, quis laudantium reiciendis perspiciatis
+                    voluptates incidunt omnis possimus deserunt vel magnam tempore corporis deleniti error repellat odit
+                    cum vitae! Veritatis dolorum excepturi ipsum ipsam eum iste, laborum quaerat, cupiditate doloremque
+                    nam natus. Quia incidunt ad consectetur voluptatem tempora, dolores animi nemo fugit, facilis ea
+                    debitis esse nulla sequi necessitatibus tenetur consequuntur? Quod expedita molestias tempora
+                    mollitia excepturi et perspiciatis nesciunt perferendis dicta. Minima impedit odio ut provident
+                    iure. Voluptas quos, magni libero rerum quisquam dolorum velit nostrum eum cupiditate, similique
+                    perspiciatis iure, dolorem excepturi? Sint nam architecto natus dolores tempore id quaerat
+                    ratione accusantium. Magnam culpa ratione numquam non eum odit accusamus vitae doloremque, quaerat
+                    cumque, doloribus unde officia ullam quia! Porro, dignissimos possimus ratione et impedit veritatis
+                    corrupti libero fugit voluptas facilis reprehenderit quod, eum assumenda tempore id, laharumborum
+                    sint
                 </p>
-                <p class="sec-text">iusto similique, adipisci deserunt aliquid ad cupiditate reiciendis, officiis
-                    accusantium rerum
-                    porro accusamus maxime a, dolorem dolor eligendi! Vero fugit dolore dolor exercitationem natus
-                    ptate voluptatem, non incidunt dolore! Sequi earum
-                    nam impedit voluptatem sint velit doloremque! Rerum aperiam dolore dicta explicabo placeat facere,
-                    quia velit totam quaerat unde consequatur inventore a saepe recusandae doloribus non ullam est
-                    voluptate ad. Molestias rerum praesentium veritatis sapiente tenetur, voluptates distinctio modi,
-                    inventore ab dolores aliquam quae, iusto corrupti suscipit eveniet explicabo? Dolore molestiae
-                    debitis recusandae eius.</p>
             </div>
+
             <!-- <div class="img-text"></div> -->
         </div>
     </section>
