--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,500;0,600;1,300&family=Ubuntu:wght@400;500;700&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" href="./css/portfolio2.css" />
+    <link rel="stylesheet" href="./css/portfolio.css" />
 </head>
 
 <body>
