--- a/index.html
+++ b/index.html
@@ -16,60 +16,72 @@
 </head>
 
 <body>
-    <section class="load-page">
-        <div class="name-box">
-            <span class="name-char">R</span>
-            <span class="name-char">A</span>
-            <span class="name-char">H</span>
-            <span class="name-char">U</span>
-            <span class="name-char">L</span>
-        </div>
-        <div class="scroll-box">
-            <div class="scroll-inner">
-                <div class="scroll-item">Javascript</div>
-                <div class="scroll-item">Javascript</div>
-                <div class="scroll-item">Node.js</div>
-                <div class="scroll-item">Vue</div>
-                <div class="scroll-item">React</div>
-                <div class="scroll-item">Python</div>
-                <div class="scroll-item">Javascript</div>
+    <div class="container">
+        <section class="load-page">
+            <div class="name-box">
+                <span class="name-char">R</span>
+                <span class="name-char">A</span>
+                <span class="name-char">H</span>
+                <span class="name-char">U</span>
+                <span class="name-char">L</span>
             </div>
-        </div>
-    </section>
-    <section class="main-page">
-        <div class="glass-card">
-            <div class="img-container">
-                <div class="img-box"></div>
-                <p class="img-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, tempora corporis
-                    animi iusto
-                    provident magnam, vitae nam officia impedit repudiandae officiis! Rerum mollitia incidunt nisi
-                    dolor! Atque autem excepturi tempora, iusto mollitia eos illum voluptas ab cum impedit sapiente
-                    corrupti quia magni ducimus obcaecati corporis ipsa molestiae tempore debitis quaerat.Eligendi,
-                    delectus. Repudiandae exercitationem deleniti quo neque qui numquam fuga accusamus
-                    tempore! Suscipit qui provident vel fuga amet aliquid, adipisci deleniti reprehenderit sunt? Nobis
-                    in officiis modi vel, assumenda exercitationem reprehenderit quas saepe accusantium, architecto
-                    blanditiis pariatur dignissimos iusto. Soluta, voluptas! Amet praesentium numquam corrupti nam</p>
+            <div class="scroll-box">
+                <div class="scroll-inner">
+                    <div class="scroll-item">Javascript</div>
+                    <div class="scroll-item">Javascript</div>
+                    <div class="scroll-item">Node.js</div>
+                    <div class="scroll-item">Vue</div>
+                    <div class="scroll-item">React</div>
+                    <div class="scroll-item">Python</div>
+                    <div class="scroll-item">Javascript</div>
+                </div>
             </div>
-            <div class="second-container">
-                <h1>Your CV</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, quis laudantium reiciendis perspiciatis
-                    voluptates incidunt omnis possimus deserunt vel magnam tempore corporis deleniti error repellat odit
-                    cum vitae! Veritatis dolorum excepturi ipsum ipsam eum iste, laborum quaerat, cupiditate doloremque
-                    nam natus. Quia incidunt ad consectetur voluptatem tempora, dolores animi nemo fugit, facilis ea
-                    debitis esse nulla sequi necessitatibus tenetur consequuntur? Quod expedita molestias tempora
-                    mollitia excepturi et perspiciatis nesciunt perferendis dicta. Minima impedit odio ut provident
-                    iure. Voluptas quos, magni libero rerum quisquam dolorum velit nostrum eum cupiditate, similique
-                    perspiciatis iure, dolorem excepturi? Sint nam architecto natus dolores tempore id quaerat
-                    ratione accusantium. Magnam culpa ratione numquam non eum odit accusamus vitae doloremque, quaerat
-                    cumque, doloribus unde officia ullam quia! Porro, dignissimos possimus ratione et impedit veritatis
-                    corrupti libero fugit voluptas facilis reprehenderit quod, eum assumenda tempore id, laharumborum
-                    sint
-                </p>
-            </div>
+        </section>
+        <section class="main-page">
+            <div class="glass-card">
+                <div class="img-container">
+                    <div class="img-box"></div>
+                    <p class="img-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, tempora
+                        corporis
+                        animi iusto
+                        provident magnam, vitae nam officia impedit repudiandae officiis! Rerum mollitia incidunt nisi
+                        dolor! Atque autem excepturi tempora, iusto mollitia eos illum voluptas ab cum impedit sapiente
+                        corrupti quia magni ducimus obcaecati corporis ipsa molestiae tempore debitis quaerat.Eligendi,
+                        delectus. Repudiandae exercitationem deleniti quo neque qui numquam fuga accusamus
+                        tempore! Suscipit qui provident vel fuga amet aliquid, adipisci deleniti reprehenderit sunt?
+                        Nobis
+                        in officiis modi vel, assumenda exercitationem reprehenderit quas saepe accusantium, architecto
+                        blanditiis pariatur dignissimos iusto. Soluta, voluptas! Amet praesentium numquam corrupti nam
+                    </p>
+                </div>
+                <div class="second-container">
+                    <h1>Your CV</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, quis laudantium reiciendis
+                        perspiciatis
+                        voluptates incidunt omnis possimus deserunt vel magnam tempore corporis deleniti error repellat
+                        odit
+                        cum vitae! Veritatis dolorum excepturi ipsum ipsam eum iste, laborum quaerat, cupiditate
+                        doloremque
+                        nam natus. Quia incidunt ad consectetur voluptatem tempora, dolores animi nemo fugit, facilis ea
+                        debitis esse nulla sequi necessitatibus tenetur consequuntur? Quod expedita molestias tempora
+                        mollitia excepturi et perspiciatis nesciunt perferendis dicta. Minima impedit odio ut provident
+                        iure. Voluptas quos, magni libero rerum quisquam dolorum velit nostrum eum cupiditate, similique
+                        perspiciatis iure, dolorem excepturi? Sint nam architecto natus dolores tempore id quaerat
+                        ratione accusantium. Magnam culpa ratione numquam non eum odit accusamus vitae doloremque,
+                        quaerat
+                        cumque, doloribus unde officia ullam quia! Porro, dignissimos possimus ratione et impedit
+                        veritatis
+                        corrupti libero fugit voluptas facilis reprehenderit quod, eum assumenda tempore id,
+                        laharumborum
+                        sint
+                    </p>
+                </div>
 
-            <!-- <div class="img-text"></div> -->
-        </div>
-    </section>
+                <!-- <div class="img-text"></div> -->
+            </div>
+        </section>
+    </div>
+
 </body>
 <script src="./js/portfolio.js"></script>
 
